<resources>
    <string name="welcome_back" translatable="false">Welcome Back</string>
    <string name="don_t_have_an_account" translatable="false">Don\'t Have An Account?</string>
    <string name="todo">TODO</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="app_name">BookWorld</string>
    <string name="add_to_favorite_genres">Add to Favorite Genres</string>
    <string name="want_to_read1">Want to Read</string>
    <string name="find_a_genre_by_name">Find a genre by name</string>
    <string name="genres_nonfiction"><![CDATA[Genres > Nonfiction]]></string>
    <string name="art">Art</string>
    <string name="new_releases">NEW RELEASES</string>
    <string name="want_to_read2">Want to Read</string>
    <string name="want_to_read3">Want to Read</string>
    <string name="want_to_read4">Want to Read</string>
    <string name="want_to_read5">Want to Read</string>
    <string name="want_to_read6">Want to Read</string>
    <string name="view_all_1">View All</string>
    <string name="popular">POPULAR</string>
    <string name="book_listing1">book listing</string>
    <string name="book_listing2">book_listing2\n</string>
    <string name="book_listing3">book_listing3</string>
    <string name="want_to_read7">Want to Read</string>
    <string name="want_to_read8">Want to Read</string>
    <string name="want_to_read9">Want to Read</string>
    <string name="want_to_read10">Want to Read</string>
    <string name="want_to_read11">Want to Read</string>
    <string name="want_to_read12">Want to Read</string>
    <string name="view_all_2">View All</string>
    <string name="most_read_this_week">MOST READ THIS WEEK</string>
    <string name="book_listing4">book_listing4</string>
    <string name="book_listing5">book_listing5</string>
    <string name="book_listing6">book_listing6</string>
    <string name="want_to_read13">Want to Read</string>
    <string name="want_to_read14">Want to Read</string>
    <string name="want_to_read15">Want to Read</string>
    <string name="want_to_read16">Want to Read</string>
    <string name="want_to_read17">Want to Read</string>
    <string name="want_to_read18">Want to Read</string>
    <string name="view_all_3">View All</string>
    <string name="book_listing7">book_listing7</string>
    <string name="book_listing8">book_listing8</string>
    <string name="book_listing9">book_listing9</string>
    <string name="explore_by_genre">EXPLORE BY GENRE</string>
    <string name="genres_sequential_art"><![CDATA[Genres > Sequential Art]]></string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="trending_books">Trending Books</string>
    <string name="find_books_online">FIND BOOKS ONLINE</string>
    <string name="find_books_onlne">FIND BOOKS ONLINE</string>
    <string name="create_account">Create Account</string>
    <string name="input_email">Input Email</string>
    <string name="username">Username</string>
    <string name="phone_contact">Phone Contact</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="log_in">Log In</string>
    <string name="enter_password">Enter Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="technology">Technology</string>
    <string name="business">Business</string>
    <string name="animation">Animation</string>
    <string name="health_sciences">Health Sciences</string>
    <string name="comics">Comics</string>
    <string name="history">History</string>
    <string name="fiction">Fiction</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="fantasy">Fantasy</string>
    <string name="borrow_book">Borrow Book</string>
    <string name="More">More</string>
    <string name="bookThumbnail">book</string>
    <string name="search1">Search</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="trending_book">Trending Books</string>
    <string name="new_release">New Releases</string>
    <string name="book_description" />
    <string name="book_price" />

</resources>