<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:layout_margin="6dp"
    android:padding="7dp"
    android:background="@drawable/cardview_book">

    <ImageView
        android:layout_gravity="center"
        android:id="@+id/bookThumbnail"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:contentDescription="TODO"
        android:src="@drawable/placeholder_image"/>

    <TextView
        android:layout_gravity="center"
        android:id="@+id/bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/book_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <TextView
        android:textStyle="bold"
        android:layout_gravity="center"
        android:id="@+id/bookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/book_author"
        android:textSize="16sp"
        android:textColor="@android:color/black" />

    <!-- Hidden TextView for Description -->
    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_description"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <!-- Hidden TextView for Price -->
    <TextView
        android:layout_gravity="center"
        android:id="@+id/bookPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/book_price"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:background="@drawable/rectangle"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:visibility="gone" />

    <!-- RatingBar (Initially Hidden) -->
    <RatingBar
        android:id="@+id/bookRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="0"
        android:visibility="gone" />

</LinearLayout>
