<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top View (Header) -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/cardview_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/baseline_arrow_back_24"
            android:layout_alignParentTop="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Health Sciences"
            android:textSize="25sp"
            android:layout_marginStart="39dp"
            android:layout_marginTop="18dp" />

        <ImageView
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/ic_dot"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:id="@+id/searchContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@drawable/square2"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/searchEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Search book"
                    android:inputType="text"
                    android:paddingStart="6dp"
                    android:padding="10dp"
                    android:background="@android:color/transparent"
                    android:drawablePadding="11dp"/>

                <TextView
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:drawableStart="@drawable/ic_search"
                    android:background="@drawable/squareend"
                    android:clickable="true"
                    android:focusable="true"/>
            </LinearLayout>
            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:visibility="gone"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:background="@color/dark_green"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/add_to_favorite_genres"
                android:textAllCaps="false"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:alpha="0.7"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Releases"
                android:textColor="@color/warm_orange"
                android:textStyle="bold"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp">

                    <LinearLayout
                        android:layout_width="390dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!-- RecyclerView for trending books -->
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyclerHealth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/row_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:background="@color/dark_green"
                        android:text="@string/want_to_read1"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:background="@color/dark_green"
                        android:text="@string/want_to_read2"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="5dp"
                        android:background="@color/dark_green"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:text="Borrow Book" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Popular Now"
                android:textColor="@color/warm_orange"
                android:textStyle="bold"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp">

                        <LinearLayout
                            android:layout_width="390dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <!-- RecyclerView for trending books -->
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerPopular"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="5dp" />
                        </LinearLayout>
                    </HorizontalScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:id="@+id/row_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:background="@color/dark_green"
                            android:text="Borrow Book"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:background="@color/dark_green"
                            android:text="Borrow Book"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <Button
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginEnd="5dp"
                            android:background="@color/dark_green"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:text="Borrow Book" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <LinearLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_top"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/hometech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mybookstech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_books" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Books"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/searchtech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Search"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/moretech"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_more" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="More"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
